hard-gists/c6936d219db8e6635d25/run.log
=== Docker Run Log for c6936d219db8e6635d25 ===
Started at: Mi 29. Okt 19:54:13 CET 2025

[2025-10-29 19:54:13] START: Running container for c6936d219db8e6635d25
[2025-10-29 19:54:14] SUCCESS: Container 8f20a491ba737b1987e963cdead6ae1375c5b2c088a0cb22e267016c150fee9e started for c6936d219db8e6635d25
=== Container logs for c6936d219db8e6635d25 ===
  File "/snippet.py", line 26
    print "cs = %lx" % cmd.cs
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c6936d219db8e6635d25 ===
[2025-10-29 19:54:16] INFO: Container 8f20a491ba737b1987e963cdead6ae1375c5b2c088a0cb22e267016c150fee9e has stopped
